bootstrap.conf: remove whitespace to match formatting on master branch

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -3,18 +3,16 @@
 
 # Copyright (C) 2010, 2011 Free Software Foundation, Inc.
 
-# This file is part of GNU coreutils.
-#
-# GNU coreutils is free software: you can redistribute it and/or modify
+# This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation, either version 3 of the License, or
 # (at your option) any later version.
-#
-# GNU coreutils is distributed in the hope that it will be useful,
+
+# This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
-#
+
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
@@ -28,16 +26,16 @@
 
 # Build prerequisites
 buildreq='
-        bison    -     http://www.gnu.org/s/bison
-        git      1.4.4 http://git-scm.com
-        gperf    -     http://www.gnu.org/s/gperf
-        gzip     -     http://www.gnu.org/s/gzip
-        makeinfo -     http://www.gnu.org/s/texinfo
-        patch    -     http://www.gnu.org/s/patch
-        perl     5.5   http://perl.com
-        rsync    -     http://www.samba.org/rsync
-        tar      -     http://www.gnu.org/s/tar
-        xz       -     http://tukaani.org/xz
+ bison    -     http://www.gnu.org/s/bison
+ git      1.4.4 http://git-scm.com
+ gperf    -     http://www.gnu.org/s/gperf
+ gzip     -     http://www.gnu.org/s/gzip
+ makeinfo -     http://www.gnu.org/s/texinfo
+ patch    -     http://www.gnu.org/s/patch
+ perl     5.5   http://perl.com
+ rsync    -     http://www.samba.org/rsync
+ tar      -     http://www.gnu.org/s/tar
+ xz       -     http://tukaani.org/xz
 '
 
 # Instructions on how to install packages in $buildreq.
@@ -55,245 +53,245 @@ tests_base=gnulib-tests
 
 # Additional gnulib-tool options to use.
 gnulib_tool_options='
-        --no-changelog
-        --avoid=canonicalize-lgpl
-        --avoid=dummy
-        --with-tests
+ --no-changelog
+ --avoid=canonicalize-lgpl
+ --avoid=dummy
+ --with-tests
 '
 
 # gnulib modules used by this package.
 gnulib_modules='
-        acl
-        alignof
-        alloca
-        announce-gen
-        areadlink-with-size
-        argmatch
-        argv-iter
-        assert
-        autobuild
-        backupfile
-        base64
-        c-strcase
-        c-strtod
-        c-strtold
-        calloc-gnu
-        canon-host
-        canonicalize
-        chown
-        cloexec
-        closein
-        closeout
-        config-h
-        configmake
-        crypto/md5
-        crypto/sha1
-        crypto/sha256
-        crypto/sha512
-        cycle-check
-        d-ino
-        d-type
-        di-set
-        diacrit
-        dirfd
-        dirname
-        do-release-commit-and-tag
-        dtoastr
-        dup2
-        environ
-        error
-        euidaccess
-        exclude
-        exitfail
-        faccessat
-        fadvise
-        fchdir
-        fclose
-        fcntl
-        fcntl-safer
-        fdl
-        fdutimensat
-        file-type
-        fileblocks
-        filemode
-        filenamecat
-        filevercmp
-        fnmatch-gnu
-        fopen-safer
-        fprintftime
-        freopen
-        freopen-safer
-        fseeko
-        fsusage
-        fsync
-        ftello
-        ftoastr
-        fts
-        full-read
-        full-write
-        getgroups
-        gethrxtime
-        getline
-        getloadavg
-        getndelim2
-        getopt-gnu
-        getpagesize
-        getpass-gnu
-        gettext
-        gettime
-        gettimeofday
-        getugroups
-        getusershell
-        git-version-gen
-        gitlog-to-changelog
-        gnu-make
-        gnu-web-doc-update
-        gnumakefile
-        gnupload
-        group-member
-        hard-locale
-        hash
-        hash-pjw
-        heap
-        host-os
-        human
-        idcache
-        ignore-value
-        inttostr
-        inttypes
-        isapipe
-        isblank
-        largefile
-        lchmod
-        lchown
-        ldtoastr
-        lib-ignore
-        linebuffer
-        link
-        link-follow
-        linkat
-        long-options
-        lstat
-        maintainer-makefile
-        malloc-gnu
-        manywarnings
-        mbrlen
-        mbrtowc
-        mbsalign
-        mbswidth
-        memcasecmp
-        memchr
-        memcmp2
-        mempcpy
-        memrchr
-        mgetgroups
-        mkancesdirs
-        mkdir
-        mkdir-p
-        mkstemp
-        mktime
-        modechange
-        mountlist
-        mpsort
-        netinet_in
-        nproc
-        obstack
-        parse-datetime
-        perl
-        physmem
-        posix-shell
-        posixtm
-        posixver
-        priv-set
-        progname
-        propername
-        pthread
-        putenv
-        quote
-        quotearg
-        randint
-        randperm
-        read-file
-        readlink
-        readtokens
-        readtokens0
-        readutmp
-        realloc-gnu
-        regex
-        remove
-        rename
-        rmdir
-        root-dev-ino
-        rpmatch
-        safe-read
-        same
-        save-cwd
-        savedir
-        savewd
-        selinux-at
-        settime
-        sig2str
-        sigaction
-        ssize_t
-        stat-macros
-        stat-size
-        stat-time
-        stdbool
-        stdlib-safer
-        stpcpy
-        stpncpy
-        strdup-posix
-        strftime
-        strsignal
-        strtod
-        strtoimax
-        strtoumax
-        symlink
-        sys_ioctl
-        sys_stat
-        sys_wait
-        termios
-        timer-time
-        timespec
-        tzset
-        uname
-        unicodeio
-        unistd-safer
-        unlink-busy
-        unlocked-io
-        unsetenv
-        update-copyright
-        uptime
-        useless-if-before-free
-        userspec
-        utimecmp
-        utimens
-        vasprintf-posix
-        vc-list-files
-        verify
-        verror
-        version-etc-fsf
-        wcwidth
-        wcswidth
-        winsz-ioctl
-        winsz-termios
-        write-any-file
-        xalloc
-        xfreopen
-        xgetcwd
-        xgetgroups
-        xgethostname
-        xmemcoll
-        xnanosleep
-        xprintf
-        xprintf-posix
-        xreadlink
-        xstrtod
-        xstrtoimax
-        xstrtol
-        xstrtold
-        xstrtoumax
-        yesno
+ acl
+ alignof
+ alloca
+ announce-gen
+ areadlink-with-size
+ argmatch
+ argv-iter
+ assert
+ autobuild
+ backupfile
+ base64
+ c-strcase
+ c-strtod
+ c-strtold
+ calloc-gnu
+ canon-host
+ canonicalize
+ chown
+ cloexec
+ closein
+ closeout
+ config-h
+ configmake
+ crypto/md5
+ crypto/sha1
+ crypto/sha256
+ crypto/sha512
+ cycle-check
+ d-ino
+ d-type
+ di-set
+ diacrit
+ dirfd
+ dirname
+ do-release-commit-and-tag
+ dtoastr
+ dup2
+ environ
+ error
+ euidaccess
+ exclude
+ exitfail
+ faccessat
+ fadvise
+ fchdir
+ fclose
+ fcntl
+ fcntl-safer
+ fdl
+ fdutimensat
+ file-type
+ fileblocks
+ filemode
+ filenamecat
+ filevercmp
+ fnmatch-gnu
+ fopen-safer
+ fprintftime
+ freopen
+ freopen-safer
+ fseeko
+ fsusage
+ fsync
+ ftello
+ ftoastr
+ fts
+ full-read
+ full-write
+ getgroups
+ gethrxtime
+ getline
+ getloadavg
+ getndelim2
+ getopt-gnu
+ getpagesize
+ getpass-gnu
+ gettext
+ gettime
+ gettimeofday
+ getugroups
+ getusershell
+ git-version-gen
+ gitlog-to-changelog
+ gnu-make
+ gnu-web-doc-update
+ gnumakefile
+ gnupload
+ group-member
+ hard-locale
+ hash
+ hash-pjw
+ heap
+ host-os
+ human
+ idcache
+ ignore-value
+ inttostr
+ inttypes
+ isapipe
+ isblank
+ largefile
+ lchmod
+ lchown
+ ldtoastr
+ lib-ignore
+ linebuffer
+ link
+ link-follow
+ linkat
+ long-options
+ lstat
+ maintainer-makefile
+ malloc-gnu
+ manywarnings
+ mbrlen
+ mbrtowc
+ mbsalign
+ mbswidth
+ memcasecmp
+ memchr
+ memcmp2
+ mempcpy
+ memrchr
+ mgetgroups
+ mkancesdirs
+ mkdir
+ mkdir-p
+ mkstemp
+ mktime
+ modechange
+ mountlist
+ mpsort
+ netinet_in
+ nproc
+ obstack
+ parse-datetime
+ perl
+ physmem
+ posix-shell
+ posixtm
+ posixver
+ priv-set
+ progname
+ propername
+ pthread
+ putenv
+ quote
+ quotearg
+ randint
+ randperm
+ read-file
+ readlink
+ readtokens
+ readtokens0
+ readutmp
+ realloc-gnu
+ regex
+ remove
+ rename
+ rmdir
+ root-dev-ino
+ rpmatch
+ safe-read
+ same
+ save-cwd
+ savedir
+ savewd
+ selinux-at
+ settime
+ sig2str
+ sigaction
+ ssize_t
+ stat-macros
+ stat-size
+ stat-time
+ stdbool
+ stdlib-safer
+ stpcpy
+ stpncpy
+ strdup-posix
+ strftime
+ strsignal
+ strtod
+ strtoimax
+ strtoumax
+ symlink
+ sys_ioctl
+ sys_stat
+ sys_wait
+ termios
+ timer-time
+ timespec
+ tzset
+ uname
+ unicodeio
+ unistd-safer
+ unlink-busy
+ unlocked-io
+ unsetenv
+ update-copyright
+ uptime
+ useless-if-before-free
+ userspec
+ utimecmp
+ utimens
+ vasprintf-posix
+ vc-list-files
+ verify
+ verror
+ version-etc-fsf
+ wcwidth
+ wcswidth
+ winsz-ioctl
+ winsz-termios
+ write-any-file
+ xalloc
+ xfreopen
+ xgetcwd
+ xgetgroups
+ xgethostname
+ xmemcoll
+ xnanosleep
+ xprintf
+ xprintf-posix
+ xreadlink
+ xstrtod
+ xstrtoimax
+ xstrtol
+ xstrtold
+ xstrtoumax
+ yesno
 '
 
 # Other locale categories that need message catalogs.
@@ -301,7 +299,7 @@ extra_locale_categories=LC_TIME
 
 # Additional options to xgettext.
 xgettext_options=$xgettext_options'
-        --from-code=UTF-8
+       --from-code=UTF-8
 '
 
 
